# snap-mysqld-exporter

./: .gitignore  CONTRIBUTING.md  README.md  my.cnf  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-and-test.yaml  ci.yaml  main.yaml  pull-request.yaml  sync_issue_to_jira.yaml
mysql_exporter/: hooks.py  log.py  service.py
scripts/: management
snap/: snapcraft.yaml
snap/hooks/: configure  install
templates/: my.cnf.j2
tests/unit/: conftest.py  test_hooks.py  test_service.py
wrappers/: mysqld-exporter-wrapper  prometheus-mysqld-exporter.wrapper
