[metadata]
name = mysql-exporter
summary = A snap package for the mysql exporter
description_file =
    README.md
author = Canonical
author_email = openstack-charmers@lists.launchpad.net
home_page = https://github.com/openstack-charmers/sunbeam
python_requires = >= 3.8
classifier =
    Environment :: OpenStack
    Environment :: Web Environment
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operation System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[files]
packages =
    mysql_exporter

[entry_points]
console_scripts =
    mysqld-exporter-service = mysql_exporter.service:main

snaphelpers.hooks =
    configure = mysql_exporter.hooks:configure
    install = mysql_exporter.hooks:install
